# reinvent-dev301-edge-agents

./: .gitignore  README.md  strands_edge_demos.ipynb
e2e-demo/: DEMO_SCRIPT.md  README.md  pyproject.toml  streamlit_app.py
e2e-demo/documents/: conveyor_belt_manual.md  packaging_unit_manual.md  safety_procedures.md  troubleshooting_guide.md
e2e-demo/edge_vector_store/: chroma.sqlite3
e2e-demo/src/: __init__.py  app.py  config.py  edge_operator_agent.py  model_router.py  session_manager.py
e2e-demo/src/models/: __init__.py  device_registry.py  document_chunk.py  iot_devices.py  scada_models.py
e2e-demo/src/storage/: __init__.py
e2e-demo/src/tools/: __init__.py  database_tools.py  document_search_tools.py  iot_tools.py  scada_extraction_tools.py
e2e-demo/tests/: __init__.py  test_session_manager.py
edge_vector_store/: chroma.sqlite3
